--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -687,7 +688,6 @@ deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.32.162.96;
 deny 193.36.132.21;
-deny 193.70.80.213;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
@@ -1014,7 +1014,6 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1036,7 +1035,6 @@ deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
-deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1077,7 +1075,6 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
@@ -1631,6 +1628,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1662,7 +1660,9 @@ deny 2a0f:ca80:1337::6d9e:fb47;
 deny 2a0f:ca80:1337::72f7:ed26;
 deny 2a0f:ca80:1337::7da1:75ca;
 deny 2a0f:ca80:1337::9bb3:5385;
+deny 2a0f:ca80:1337::a87a:2f7d;
 deny 2a0f:ca80:1337::b5a4:a762;
+deny 2a0f:ca80:1337::cd4a:eb83;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1861,6 +1861,8 @@ deny 50.118.225.222;
 deny 50.118.225.225;
 deny 50.118.225.226;
 deny 50.118.225.227;
+deny 50.118.225.228;
+deny 50.118.225.229;
 deny 50.118.225.230;
 deny 50.118.225.232;
 deny 50.118.225.233;
@@ -1914,7 +1916,6 @@ deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.164.66;
-deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.84.146;
@@ -1929,6 +1930,7 @@ deny 66.220.242.222;
 deny 66.78.40.182;
 deny 66.78.40.73;
 deny 67.219.109.141;
+deny 69.126.112.240;
 deny 70.34.249.72;
 deny 71.19.144.106;
 deny 72.14.179.10;
