--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -122,6 +122,7 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
+set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -687,7 +688,6 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
@@ -1014,7 +1014,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1036,7 +1035,6 @@ set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
@@ -1077,7 +1075,6 @@ set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fa8a:3:a::a;
@@ -1631,6 +1628,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1662,7 +1660,9 @@ set_real_ip_from 2a0f:ca80:1337::6d9e:fb47;
 set_real_ip_from 2a0f:ca80:1337::72f7:ed26;
 set_real_ip_from 2a0f:ca80:1337::7da1:75ca;
 set_real_ip_from 2a0f:ca80:1337::9bb3:5385;
+set_real_ip_from 2a0f:ca80:1337::a87a:2f7d;
 set_real_ip_from 2a0f:ca80:1337::b5a4:a762;
+set_real_ip_from 2a0f:ca80:1337::cd4a:eb83;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1861,6 +1861,8 @@ set_real_ip_from 50.118.225.222;
 set_real_ip_from 50.118.225.225;
 set_real_ip_from 50.118.225.226;
 set_real_ip_from 50.118.225.227;
+set_real_ip_from 50.118.225.228;
+set_real_ip_from 50.118.225.229;
 set_real_ip_from 50.118.225.230;
 set_real_ip_from 50.118.225.232;
 set_real_ip_from 50.118.225.233;
@@ -1914,7 +1916,6 @@ set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.164.66;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
@@ -1929,6 +1930,7 @@ set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
+set_real_ip_from 69.126.112.240;
 set_real_ip_from 70.34.249.72;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
