--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,7 +122,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -310,6 +309,7 @@ deny 185.112.146.168;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
+deny 185.126.115.146;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -1003,7 +1003,6 @@ deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
 deny 23.137.253.109;
-deny 23.137.253.110;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
@@ -1035,6 +1034,7 @@ deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1075,6 +1075,7 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
@@ -1086,7 +1087,6 @@ deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
-deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -1365,7 +1365,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:105:d7eb::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1614,7 +1613,6 @@ deny 2a0c:e300::23;
 deny 2a0d:2787:1b:d19::a;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1629,7 +1627,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1765,7 +1762,6 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
-deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1884,7 +1880,6 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.100.26;
-deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -2011,7 +2006,6 @@ deny 91.92.109.43;
 deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
-deny 93.115.172.238;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.95.227.37;
