--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,6 +131,7 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
@@ -142,7 +143,6 @@ deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
-deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -420,7 +420,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:105:d7eb::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -669,7 +668,6 @@ deny 2a0c:e300::23;
 deny 2a0d:2787:1b:d19::a;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -684,7 +682,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
