--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,6 +122,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -695,7 +696,6 @@ allow 194.163.157.49;
 allow 194.26.192.249;
 allow 194.26.192.77;
 allow 194.53.137.156;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.26.247.64;
@@ -1012,7 +1012,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1364,7 +1363,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1627,6 +1625,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1683,7 +1682,6 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
@@ -1879,7 +1877,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1926,7 +1923,6 @@ allow 66.220.242.222;
 allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
-allow 69.126.112.240;
 allow 70.34.249.72;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1973,6 +1969,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
+allow 88.151.117.146;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
