--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -695,7 +696,6 @@ deny 194.163.157.49;
 deny 194.26.192.249;
 deny 194.26.192.77;
 deny 194.53.137.156;
-deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.26.247.64;
@@ -1012,7 +1012,6 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1364,7 +1363,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1627,6 +1625,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1683,7 +1682,6 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
@@ -1879,7 +1877,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1926,7 +1923,6 @@ deny 66.220.242.222;
 deny 66.78.40.182;
 deny 66.78.40.73;
 deny 67.219.109.141;
-deny 69.126.112.240;
 deny 70.34.249.72;
 deny 71.19.144.106;
 deny 72.14.179.10;
@@ -1973,6 +1969,7 @@ deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
+deny 88.151.117.146;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
